--- a/806_final.Rmd
+++ b/806_final.Rmd
@@ -42,84 +42,79 @@ database <- inner_join(comb1, comb2)
 
 ```
 
+# relative abundance of each phlya by pH in 2009
 ```{r, echo = FALSE}
-# come back to this later
+
 library(ggplot2)
 select(database, Phylum, value, pH, Year) %>%
   filter(Year == 2009, pH > 0) %>% 
   ggplot(mapping = aes(fill = Phylum, x = pH, y = value, color =
-  Phylum)) + geom_bar(position="stack", stat="identity") + 
+  Phylum)) + geom_bar(position="stack", stat="identity") +
   labs(x = "pH", y = "Abundance") +
   theme(legend.text = element_text(size = 6), 
-  legend.key.size = unit(0.5, "cm"), 
-  legend.key.height = unit(0.5, "cm"),  
-  legend.key.width = unit(0.5, "cm"))
+  legend.key.size = unit(0.35, "cm"), 
+  legend.key.height = unit(0.35, "cm"),  
+  legend.key.width = unit(0.35, "cm")) 
 
 ```
 
-# this plot shows abundance of microbes by varying pH in Crystal Bog
+# average temp 2007 vs. 2009
 ```{r, echo = FALSE}
 
-select(database, Lake, Phylum, value, pH) %>%
-  filter(pH > 0) %>% 
+select(database, Month, Year, Temperature) %>%
+  group_by(Year, Month) %>%
+  filter(Temperature != "NA", Month == "6" | Month == "7" | Month == "8") %>%
+  summarize(mean_temp = mean(Temperature)) %>%
+  ggplot(mapping = aes(x = Month, y = mean_temp, color = as.factor(Year),
+  group = Year, by = Year)) + geom_point() + geom_line() + labs(color = 
+  "Year", x = "Month", y = "Temperature (C)") + scale_color_brewer(palette = "Dark2") + scale_x_continuous(breaks=c(6, 7, 8))
+
+```
+
+# dissolved oxygen 2007 vs. 2009
+```{r, echo = FALSE}
+
+select(database, Month, Year, DO) %>%
+  group_by(Year, Month) %>%
+  filter(DO != "NA", Month == "6" | Month == "7" | Month == "8") %>%
+  summarize(mean_DO = mean(DO)) %>%
+  ggplot(mapping = aes(x = Month, y = mean_DO, color = as.factor(Year),
+  group = Year, by = Year)) + geom_point() + geom_line() + labs(color = 
+  "Year", x = "Month", y = "Dissolved Oxygen") + scale_color_brewer(palette = "Dark2") + scale_x_continuous(breaks=c(6, 7, 8))
+
+```
+
+# depth vs. dissolved oxygen measured - needs work
+```{r, echo = FALSE}
+
+select(database, Depth, DO) %>%
+  filter(DO != "NA", Depth != "NA") %>%
+  ggplot(mapping = aes(x = Depth, y = DO)) + geom_point() + geom_line() + labs(x = "Depth", y = "Dissolved Oxygen") + scale_color_brewer(palette = "Dark2")
+
+```
+
+# this plot shows abundance of microbes by varying pH, only for 2009 (limited data for 2007)
+```{r, echo = FALSE}
+
+select(database, Phylum, value, pH, Year) %>%
+  filter(pH > 0, Year == 2009) %>% 
   ggplot(mapping = aes(x = pH, y = value)) + geom_bar(stat="identity") + 
   labs(x = "pH", y = "Abundance") 
 
 ```
 
-# space to practice making graphs / not finalized
+# Comparison of relative abundances between lake layers in 2009 - needs work
 ```{r, echo = FALSE}
-
-select(database, Month, Year, Temperature) %>%
-  filter(Temperature > 0) %>% 
-  ggplot(mapping = aes(x = Month, y = Temperature, by = Year)) + labs(x = "Month", y = "Temperature (C)") + geom_line() + geom_point()
-
-```
-
-# practice graph space
-```{r, echo = FALSE}
-
-select(database, Lake, Temperature, Month, Year) %>%
-  filter(Year == 2007, Temperature != "NA") %>% 
-  ggplot(mapping = aes(x = Month, y = Temperature, color = Lake)) +
-  geom_point() + geom_line()
-
-```
-
-```{r, echo = FALSE}
-
-select(database, Month, Year, Temperature) %>%
-  group_by(Month, Year) %>%
-  filter(Temperature != "NA") %>%
-  summarize(mean_temp = mean(Temperature)) %>%
-  ggplot(mapping = aes(x = Month, y = mean_temp, color = 
-  Year, group = Year)) + geom_point() + geom_line() + labs(color = 
-  "Year", x = "Month", y = "Temperature (C)")
-
-```
-
-```{r, echo = FALSE}
-
-select(database, Month, Year, DO, Lake) %>%
-  group_by(Lake, Month) %>%
-  filter(DO != "NA", Year == 2007) %>%
-  summarize(mean_DO = mean(DO)) %>%
-  ggplot(mapping = aes(x = Month, y = mean_DO, color = 
-  Lake, group = Lake)) + geom_point() + geom_line() + labs(color = 
-  "Lake", x = "Month", y = "Dissolved Oxygen (DO)")
-
-```
-
-```{r, echo = FALSE}
-
-select(database, Month, Year, pH, Lake) %>%
-  group_by(Lake, Month) %>%
-  filter(pH != "NA", Year == 2009) %>%
-  summarize(mean_pH = mean(pH)) %>%
-  ggplot(mapping = aes(x = Month, y = mean_pH, color = 
-  Lake, group = Lake)) + geom_point() + geom_line() + labs(color = 
-  "Lake", x = "Month", y = "pH")
-
+select(database, Phylum, value, Layer, Year) %>%
+  filter(Year == 2009) %>%
+  group_by(Layer) %>%
+  ggplot(mapping = aes(fill = Phylum, x = Layer, y = value, color =
+  Phylum)) + geom_bar(position="stack", stat="identity") +
+  labs(x = "Layer", y = "Abundance") +
+  theme(legend.text = element_text(size = 6), 
+  legend.key.size = unit(0.35, "cm"), 
+  legend.key.height = unit(0.35, "cm"),  
+  legend.key.width = unit(0.35, "cm")) 
 ```
 
 
@@ -129,5 +124,6 @@ select(database, Month, Year, pH, Lake) %>%
 
 **References**
 
+McMahon, K., S. Jones, A. Shade, R. Newton, E. Read, L. Beversdorf, R. Rohwer, B. Peterson, A. Linz, E. McDaniel, 	G. 	Wolf, and S. Schmitz. 2019. Microbial Observatory at North Temperate Lakes LTER High-resolution temporal and 	spatial dynamics of microbial community structure in freshwater bog lakes 2005 - 2009 original format ver 4. 	Environmental Data Initiative.
 
 
