--- a/806_final.Rmd
+++ b/806_final.Rmd
@@ -9,13 +9,15 @@ editor_options:
 **Introduction**
   
   Microbial communities are responsible for carrying out crucial ecosystem functions and processes, and are therefore essential to life on Earth (Li et al., 2015). Specifically, in aquatic systems, bacterial communities play vital roles in biogeochemical cycling (Monard et al., 2016). Knowledge of the composition, structure, and distribution of microbial communities can be utilized to predict how an ecosystem may respond to environmental changes over time (Monard et al., 2016; Sieber et al., 2020).
-  The North Temperate Lakes Long Term Ecological Research (LTER) program located in Vilas County, Wisconsin has collected a myriad of data from lakes and bogs in the area. In 2007 and 2009, data on pH, dissolved oxygen (DO), and temperature were collected from Crystal Bog. Additionally, samples were collected and analyzed to identify members of the microbial community by 16S rRNA sequencing (McMahon et al., 2019). This dataset was analyzed using R v. 4.1.1 to gain an understanding of the influence these environmental factors (pH, DO, temperature) may have had on microbial community composition between 2007 and 2009.
+  The North Temperate Lakes Long Term Ecological Research (LTER) program located in Vilas County, Wisconsin has collected a myriad of data from lakes and bogs in the area. In 2007 and 2009, data on pH, dissolved oxygen (DO), and temperature were collected from Crystal Bog. Additionally, samples were collected and analyzed to identify members of the microbial community by 16S rRNA sequencing (McMahon et al., 2019). This dataset was analyzed using R v. 4.1.1 to gain an understanding of the influence these environmental factors (pH, DO, temperature) may have had on microbial community composition between Summer 2007 and Summer 2009.
 
 **Methods**
 
-  Data was collected by researchers through the North Temperate Lakes LTER in Vilas County, Wisconsin. Freshwater samples were collected from Crystal Bog in 2007 and 2009 and 16S rRNA sequencing was performed. Data was analyzed using R v. 4.1.1. The vegan package was used to generate (NMDS or PCoA) ordinations to visualize relatedness of microbial community samples according to (depth, layer, DO, pH, or temperature).
+  Data was collected by researchers through the North Temperate Lakes LTER in Vilas County, Wisconsin. Freshwater samples were collected from Crystal Bog in 2007 and 2009 and 16S rRNA sequencing was performed. Data was analyzed using R v. 4.1.1. 
   
 **Results**
+
+
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -62,17 +64,6 @@ select(database, Phylum, value, pH, Year) %>%
   legend.key.height = unit(0.45, "cm"),  
   legend.key.width = unit(0.45, "cm")) + scale_color_manual(
     values = col_vector)
-
-```
-
-# working on making a distance matrix 
-OTUs as row names, samples as columns
-vegdist(database)
-
-```{r, echo = FALSE}
-select(database, OTU, Sample_Name, value) -> data
-  as.matrix(data,) -> dist_matrix
-vegdist(., method = "bray") -> dist_matrix
 
 ```
 
@@ -144,32 +135,23 @@ select(database, Month, Year, pH) %>%
 
 ```
 
-# depth vs. dissolved oxygen measured - needs work (only set to show June 2009)
+# keep
 ```{r, echo = FALSE}
 
 select(database, Depth, DO, Month, Year) %>%
-  filter(DO != "NA", Depth != "NA", Month == "6", Year == "2009") %>%
-  ggplot(mapping = aes(x = Depth, y = DO)) + geom_point() + geom_line() + labs(x = "Depth", y = "Dissolved Oxygen")
+  filter(DO != "NA", Depth != "NA", Month == 6 | Month ==
+  7 | Month == 8, Year == "2009") %>%
+  group_by(Depth) %>%
+  summarize(mean_DO = mean(DO)) %>%
+  ggplot(mapping = aes(x = Depth, y = mean_DO)) + geom_point() + geom_line() + labs(x = "Depth", y = "Dissolved Oxygen")
 
 ```
 
-# this plot shows abundance of microbes by varying pH, only for 2009 (limited pH data for 2007)
-```{r, echo = FALSE}
-
-select(database, Phylum, value, pH, Year) %>%
-  filter(Year == 2009, value > 100, pH != "NA") %>%
-  group_by(pH, Phylum) %>%
-  summarize(value=sum(value)) %>%
-  ggplot(mapping = aes(fill = Phylum, x = pH, y =
-  value, color = Phylum)) + geom_bar(position = 
-  "stack", stat="identity") + labs(x="pH", y="Abundance")
-
-```
-
+# maybe keep
 ```{r, echo = FALSE}
 
 select(database, Phylum, value, Month, Year, Temperature) %>%
-  filter(Year == 2009, value > 100, Temperature != "NA") %>%
+  filter(Year == 2009, value > 100, Temperature != "NA", Month != 5) %>%
   group_by(Month, Phylum) %>%
   summarize(value=sum(value)) %>%
   ggplot(mapping = aes(fill = Phylum, x = Month, y =
@@ -178,25 +160,11 @@ select(database, Phylum, value, Month, Year, Temperature) %>%
 
 ```
 
-```{r, echo = FALSE}
-
-select(database, Phylum, value, Year, Depth) %>%
-  filter(Year == 2009, value > 1, Depth != "NA") %>%
-  group_by(Depth, Phylum) %>%
-  summarize(value=sum(value)) %>%
-  ggplot(mapping = aes(fill = Phylum, x = Depth, y =
-  value, color = Phylum)) + geom_bar(position = 
-  "stack", stat="identity") + labs(x = "Depth (m)", y = "Abundance") +   
-  scale_x_continuous(breaks=c(0,0.5,1,1.5,2,2.5)) +
-  scale_color_manual(values = col_vector)
-
-```
-
-# Comparison of relative abundances between lake layers in 2009 - needs work
+# keep
 ```{r, echo = FALSE}
 
 select(database, Phylum, value, Layer, Year) %>%
-  filter(Year == 2009, value > 100) %>%
+  filter(Year == 2009, value > 200) %>%
   group_by(Layer, Phylum) %>%
   summarize(value=sum(value)) %>%
   ggplot(mapping = aes(fill = Phylum, x = Layer, y =
@@ -210,89 +178,36 @@ select(database, Phylum, value, Layer, Year) %>%
   legend.key.width = unit(0.35, "cm")) 
 
 ```
-
+# remove at end but save for code reference
 ```{r, echo = FALSE}
-
-select(database, Phylum, value, Year) %>%
-  filter(value > 100) %>%
-  group_by(Year, Phylum) %>%
-  summarize(value=sum(value)) %>%
-  ggplot(mapping = aes(fill = Phylum, x = Year, y =
-  value, color = Phylum)) + geom_bar(position = 
-  "stack", stat="identity") +
-  labs(x = "Year", y = "Abundance") +
   theme(legend.text = element_text(size = 6), 
   legend.key.size = unit(0.35, "cm"), 
   legend.key.height = unit(0.35, "cm"),  
   legend.key.width = unit(0.35, "cm")) + 
   scale_x_continuous(breaks=c(2007, 2009))
 ```
-
+# keep
 ```{r, echo = FALSE}
 
-select(database, Phylum, value, Layer, Year, Depth) %>%
-  filter(Year == 2009, value > 200) %>%
-  ggplot(mapping = aes(x = Phylum, y = value, color = Phylum)) + geom_bar(stat="identity")
+select(database, Phylum, value, Year, Month) %>%
+  filter(value > 200, Year == 2007, Month == 6 | Month == 7 | Month == 8) %>%
+  group_by(Year, Phylum) %>%
+  summarize(value=sum(value)) %>%
+  ggplot(mapping = aes(x = Phylum, y = 
+  value)) + geom_bar(stat = "identity", fill = "steelblue") + ggtitle("Most Abundant Phyla: Summer 2007") + labs(x = "Phylum", y = "Abundance") + theme(axis.text.x = element_text(angle = 90, vjust = 0.5))
 
 ```
-
+# keep
 ```{r, echo = FALSE}
-library(dplyr)
-library(data.table)
-library(plotly)
 
-df <- database
-a <- list(text = sprintf("Epilimnion"),
-          font = list(size = 14),
-          yanchor = "bottom",
-          xancher = "center",
-          align = "center",
-          x = 0.5,
-          y = 1,
-          showarrow = FALSE)
-b <- list(text = sprintf("Hypolimnion"),
-          font = list(size = 14),
-          yanchor = "bottom",
-          xanchor = "center",
-          align = "center",
-          x = 0.5,
-          y = 1, 
-          showarrow = FALSE)
-
-p1 <- df %>%
-  mutate(Phylum = fct_reorder(Phylum, value, .fun = "mean", .desc = T)) %>%
-  group_by(Phylum) %>%
-  filter(Layer == "Epilimnion") %>%
-  plot_ly(x = ~Layer,
-          y = ~value,
-          color = ~Phylum,
-          colors = "Paired",
-          type = "bar",
-          legendgroup = ~Phylum,
-          showlegend = T) %>%
-  layout(barmode = "stack", legend = list(title = list(text = "Phylum")), 
-         annotations = a, xaxis = list(autorange = "reversed"))
-
-p2 <- df %>%
-  mutate(Phylum = fct_reorder(Phylum, value, .fun = "mean", .desc = T)) %>%
-  group_by(Phylum) %>%
-  filter(Layer == "Hypolimnion") %>%
-  plot_ly(x = ~Layer,
-          y = ~value,
-          color = ~Phylum,
-          colors = "Paired",
-          type = "bar",
-          legendgroup = ~Phylum,
-          showlegend = T) %>%
-  plotly::layout(barmode = "stack", legend = list(title =
-      list(text = "Phylum")), annotations = b, xaxis = list(
-      autorange = "reversed"))
-
-p <- subplot(nrows = 1, p1, p2, titleX = T, titleY = T, 
-             shareX = T, shareY = T, margin = 0.05)
-          
+select(database, Phylum, value, Year, Month) %>%
+  filter(value > 200, Year == 2009, Month == 6 | Month == 7 | Month == 8) %>%
+  group_by(Year, Phylum) %>%
+  summarize(value=sum(value)) %>%
+  ggplot(mapping = aes(x = Phylum, y = 
+  value)) + geom_bar(stat = "identity", fill = "Coral2") + ggtitle("Most Abundant Phyla: Summer 2009") + labs(x = "Phylum", y = "Abundance")
 ```
-# Need to decrease current number of figures / create ordinations (more relevant to explain questions)
+
 
 **Discussion**
 
