--- a/806_final.Rmd
+++ b/806_final.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "806_final"
+title: "Abiotic and Biotic Characteristics of Crystal Bog, Wisconsin in 2007 and 2009"
 author: "Megan Worth"
 date: "12/14/2021"
 output: pdf_document
@@ -57,10 +57,12 @@ select(database, Month, Year, Temperature) %>%
   filter(Temperature != "NA", Month == 6 | Month ==
   7 | Month == 8) %>%
   summarize(mean_Temperature = mean(Temperature)) %>%
-  ggplot(mapping = aes(x = Month, y = mean_Temperature, color =
-  as.factor(Year),
-  group = Year, by = Year)) + geom_point() + geom_line() + labs(color = 
-  "Year", x = "Month", y = "Temperature (C)") + scale_color_brewer(palette = "Dark2") + scale_x_continuous(breaks=c(6, 7, 8)) -> temp_graph
+  ggplot(mapping = aes(x = Month, y = mean_Temperature, 
+  color = as.factor(Year),
+  group = Year, by = Year)) + geom_point() + geom_line() +
+  labs(color = "Year", x = "Month", y = "Temperature (C)") +
+  scale_color_brewer(palette = "Dark2") + scale_x_continuous(
+  breaks=c(6, 7, 8)) -> temp_graph
 
 ```
 
@@ -68,13 +70,13 @@ select(database, Month, Year, Temperature) %>%
 
 select(database, Month, Year, DO) %>%
   group_by(Year, Month) %>%
-  filter(DO != "NA", Month == 6 | Month ==
-  7 | Month == 8) %>%
+  filter(DO != "NA", Month == 6 | Month == 7 | Month == 8) %>%
   summarize(mean_DO = mean(DO)) %>%
   ggplot(mapping = aes(x = Month, y = mean_DO, color =
-  as.factor(Year),
-  group = Year, by = Year)) + geom_point() + geom_line() + labs(color = 
-  "Year", x = "Month", y = "Dissolved Oxygen") + scale_color_brewer(palette = "Dark2") + scale_x_continuous(breaks=c(6, 7, 8)) -> DO_graph
+  as.factor(Year), group = Year, by = Year)) + geom_point() + 
+  geom_line() + labs(color = "Year", x = "Month", 
+  y = "Dissolved Oxygen") + scale_color_brewer(palette = "Dark2") +
+  scale_x_continuous(breaks=c(6, 7, 8)) -> DO_graph
 
 ```
 
@@ -82,44 +84,48 @@ select(database, Month, Year, DO) %>%
 
 select(database, Month, Year, pH) %>%
   group_by(Year, Month) %>%
-  filter(pH != "NA", Month == 6 | Month ==
-  7 | Month == 8) %>%
+  filter(pH != "NA", Month == 6 | Month == 7 | Month == 8) %>%
   summarize(mean_pH = mean(pH)) %>%
   ggplot(mapping = aes(x = Month, y = mean_pH, color =
-  as.factor(Year),
-  group = Year)) + geom_point() + geom_line() + labs(color = 
-  "Year", x = "Month", y = "pH") + scale_color_brewer(palette = "Dark2") + scale_x_continuous(breaks=c(6, 7, 8)) -> pH_graph
+  as.factor(Year), group = Year)) + geom_point() +
+  geom_line() + labs(color = "Year", x = "Month", y = "pH") +
+  scale_color_brewer(palette = "Dark2") + scale_x_continuous(
+  breaks = c(6, 7, 8)) -> pH_graph
 
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE}
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap= "this is figure 1"}
+
 library(ggpubr)
-ggarrange(pH_graph, temp_graph, DO_graph, labels = c("A", "B", "C"),
-  ncol = 2, nrow = 2)
+ggarrange(temp_graph, DO_graph, pH_graph, labels = c("A", "B", "C"),
+  common.legend = TRUE, legend = "bottom", ncol = 2, nrow = 2)
 
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE}
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "this is fig. 2"}
 
 select(database, Depth, DO, Month, Year) %>%
   filter(DO != "NA", Depth != "NA", Month == 6 | Month ==
   7 | Month == 8, Year == "2009") %>%
   group_by(Depth) %>%
   summarize(mean_DO = mean(DO)) %>%
-  ggplot(mapping = aes(x = Depth, y = mean_DO)) + geom_point() + geom_line() + labs(x = "Depth", y = "Dissolved Oxygen")
+  ggplot(mapping = aes(x = Depth, y = mean_DO)) +
+  geom_point() + geom_line() + labs(x = "Depth", y =
+  "Dissolved Oxygen")
 
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE}
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap= "this is fig. 3"}
 
 select(database, Phylum, value, Layer, Year) %>%
   filter(Year == 2009, value > 200) %>%
   group_by(Layer, Phylum) %>%
   summarize(value=sum(value)) %>%
-  ggplot(mapping = aes(fill = Phylum, x = Layer, y =
-  value, color = Phylum)) + geom_bar(position = 
-  "stack", stat="identity") + geom_text(aes(label = Phylum),
-  size = 3, color = "black", position = position_stack(vjust = 0.5)) +
+  ggplot(mapping = aes(fill = Phylum, x =
+  Layer, y = value, color = Phylum)) + 
+  geom_bar(position = "stack", stat="identity") +
+  geom_text(aes(label = Phylum), size = 3, color =
+  "black", position = position_stack(vjust = 0.5)) +
   labs(x = "Layer", y = "Abundance") +
   theme(legend.text = element_text(size = 6), 
   legend.key.size = unit(0.35, "cm"), 
@@ -128,55 +134,64 @@ select(database, Phylum, value, Layer, Year) %>%
 
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE}
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "this is fig. 4"}
 # maybe keep
-select(database, Phylum, value, Month, Year, Temperature) %>%
-  filter(Year == 2009, value > 100, Temperature != "NA", Month != 5) %>%
+select(database, Phylum, value, Month, Year,
+  Temperature) %>%
+  filter(Year == 2009, value > 100, Temperature !=
+  "NA", Month != 5) %>%
   group_by(Month, Phylum) %>%
   summarize(value=sum(value)) %>%
   ggplot(mapping = aes(fill = Phylum, x = Month, y =
   value, color = Phylum)) + geom_bar(position = 
-  "stack", stat="identity") + labs(x="Month", y = "Abundance") 
+  "stack", stat="identity") + labs(x="Month", y =
+  "Abundance") 
 
 ```
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
 
 select(database, Phylum, value, Year, Month) %>%
-  filter(value > 200, Year == 2007, Month == 6 | Month == 7 | Month == 8) %>%
+  filter(value > 200, Year == 2007, Month ==
+  6 | Month == 7 | Month == 8) %>%
   group_by(Year, Phylum) %>%
   summarize(value=sum(value)) %>%
   ggplot(mapping = aes(x = Phylum, y = 
-  value)) + geom_bar(stat = "identity", fill = "steelblue") + ggtitle("2007") + labs(x = "Phylum", y = "Abundance") + theme(axis.text.x = element_text(angle = 90, vjust =
-  0.5)) -> graph_1
+  value)) + geom_bar(stat = "identity", fill =
+  "steelblue") + ggtitle("2007") + labs(x = "Phylum",
+  y = "Abundance") + theme(axis.text.x = element_text(
+  angle = 90, vjust = 0.5)) -> graph_1
 
 ```
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE}
 
 select(database, Phylum, value, Year, Month) %>%
-  filter(value > 200, Year == 2009, Month == 6 | Month == 7 | Month == 8) %>%
+  filter(value > 200, Year == 2009, Month ==
+  6 | Month == 7 | Month == 8) %>%
   group_by(Year, Phylum) %>%
   summarize(value=sum(value)) %>%
   ggplot(mapping = aes(x = Phylum, y = 
-  value)) + geom_bar(stat = "identity", fill = "Coral2") + ggtitle("2009") + labs(x =
-  "Phylum", y = "Abundance") + theme(axis.text.x = element_text(angle = 90, vjust =
-  0.5))-> graph_2
+  value)) + geom_bar(stat = "identity", fill =
+  "Coral2") + ggtitle("2009") + labs(x =
+  "Phylum", y = "Abundance") + theme(axis.text.x =
+  element_text(angle = 90, vjust = 0.5))-> graph_2
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE}
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "this is fig. 5"}
 
 ggarrange(graph_1, graph_2, labels = c("A", "B"),
-  ncol = 2, nrow = 1, common.legend = TRUE, legend = "bottom")
+  ncol = 2, nrow = 1)
 
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE}
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "this is fig. 6"}
 # maybe keep
 select(database, Phylum, value, pH, Year) %>%
   filter(Year == 2009, pH > 0, value > 100) %>% 
-  ggplot(mapping = aes(fill = Phylum, x = pH, y = value, color =
-  Phylum, by = Phylum)) + geom_bar(position="stack", stat="identity") +
+  ggplot(mapping = aes(fill = Phylum, x = pH, y =
+  value, color = Phylum, by = Phylum)) + geom_bar(
+  position="stack", stat="identity") +
   labs(x = "pH", y = "Abundance") +
   theme(legend.text = element_text(size = 6), 
   legend.key.size = unit(0.45, "cm"), 
