--- a/806_final.Rmd
+++ b/806_final.Rmd
@@ -15,8 +15,10 @@ editor_options:
 
   Data was collected by researchers through the North Temperate Lakes LTER in Vilas County, Wisconsin. Freshwater samples were collected from Crystal Bog in 2007 and 2009 and 16S rRNA sequencing was performed. Data was analyzed using R v. 4.1.1. 
   
-**Results**
-
+**Results and Discussion**
+  Abiotic characteristics of Crystal Bog measured in Summer 2007 and Summer 2009 were temperature (C) and DO content (mg/L). Measurements of pH were recorded only in 2007. Between June and August of 2007 and 2009, the temperature of Crystal Bog increased consistently (Figure 1A). In 2007, the DO content increased between June and August, while it decreased over the same time span in 2009 (Figure 1B). Average DO content plotted against depth (m) showed a decreasing amount of oxygen as depth increased (Figure 2). The pH of Crystal Bog in 2007 became more acidic between June and July, and increased between July and August (Figure 1C). The average pH of Crystal Bog remained acidic, with no measurements recorded over a pH of 4.0. 
+  16S rRNA sequencing of samples resulted in the recognition of 45 unique phyla across all samples in 2007 and 2009. The total abundance of each phylum ranged from 20 (FCPU426) to 5,597,312 (Proteobacteria) reads (Table 1). Samples were collected at varying depths, including both the upper (Epilimnion) layer and lower (Hypolimnion) layer of Crystal Bog. When compared, the same five major phyla (Acidobacteria, Actinobacteria, Bacteroidetes, Proteobacteria, and Verrucomicrobia) were found to dominate both layers (Figure 3). Relative abundances of the major phyla (>200 reads) were calculated separately for 2007 and 2009 due to varying numbers of samples collected per year. In 2007, eight phyla were found to make up the majority of the microbial community. In order of abundance, the eight phyla were: Proteobacteria, Actinobacteria, Acidobacteria, Verrucomicrobia, Bacteroidetes, Fusobacteria, Cyanobacteria, and OD1 (Figure 4A). In 2009, only five phyla were found to dominate the microbial community. In order of abundance, the five phyla were: Proteobacteria, Actinobacteria, Acidobacteria, Verrucomicrobia, and Bacteroidetes (Figure 4B).
+  
 
 
 ```{r setup, include=FALSE, message = FALSE}
@@ -75,7 +77,7 @@ select(database, Month, Year, DO) %>%
   ggplot(mapping = aes(x = Month, y = mean_DO, color =
   as.factor(Year), group = Year, by = Year)) + geom_point() + 
   geom_line() + labs(color = "Year", x = "Month", 
-  y = "Dissolved Oxygen") + scale_color_brewer(palette = "Dark2") +
+  y = "Dissolved Oxygen (mg/L)") + scale_color_brewer(palette = "Dark2") +
   scale_x_continuous(breaks=c(6, 7, 8)) -> DO_graph
 
 ```
@@ -94,7 +96,7 @@ select(database, Month, Year, pH) %>%
 
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap= "this is figure 1"}
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap= "Average monthly temperature (A), dissolved oxygen (DO) content (B), and pH (C) of Crystal Bog in 2007 and 2009. Time scale covers the Summer months: June (6), July (7), and August (8)."}
 
 library(ggpubr)
 ggarrange(temp_graph, DO_graph, pH_graph, labels = c("A", "B", "C"),
@@ -102,7 +104,7 @@ ggarrange(temp_graph, DO_graph, pH_graph, labels = c("A", "B", "C"),
 
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "this is fig. 2"}
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Average dissolved oxygen (DO) content (mg/L) measured at increasing depth (m) in Crystal Bog."}
 
 select(database, Depth, DO, Month, Year) %>%
   filter(DO != "NA", Depth != "NA", Month == 6 | Month ==
@@ -110,12 +112,21 @@ select(database, Depth, DO, Month, Year) %>%
   group_by(Depth) %>%
   summarize(mean_DO = mean(DO)) %>%
   ggplot(mapping = aes(x = Depth, y = mean_DO)) +
-  geom_point() + geom_line() + labs(x = "Depth", y =
-  "Dissolved Oxygen")
+  geom_point() + geom_line() + labs(x = "Depth (m)", y =
+  "DO (mg/L)")
 
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap= "this is fig. 3"}
+```{r, echo = FALSE, message = FALSE, warning = FALSE, }
+library(knitr)
+select(database, Phylum, value) %>%
+  group_by(Phylum) %>%
+  filter(value > 0) %>%
+  summarize(value = sum(value)) %>%
+  kable(., caption = "Total abundances of each phyla in Crystal Bog", col.names = c("Phylum", "Total Reads"))   
+```
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap= "Relative abundances of the most abundant phyla (> 200 reads) identified at the upper (Epilimnion) and lower (Hypolimnion) layers of Crystal Bog."}
 
 select(database, Phylum, value, Layer, Year) %>%
   filter(Year == 2009, value > 200) %>%
@@ -131,21 +142,6 @@ select(database, Phylum, value, Layer, Year) %>%
   legend.key.size = unit(0.35, "cm"), 
   legend.key.height = unit(0.35, "cm"),  
   legend.key.width = unit(0.35, "cm")) 
-
-```
-
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "this is fig. 4"}
-# maybe keep
-select(database, Phylum, value, Month, Year,
-  Temperature) %>%
-  filter(Year == 2009, value > 100, Temperature !=
-  "NA", Month != 5) %>%
-  group_by(Month, Phylum) %>%
-  summarize(value=sum(value)) %>%
-  ggplot(mapping = aes(fill = Phylum, x = Month, y =
-  value, color = Phylum)) + geom_bar(position = 
-  "stack", stat="identity") + labs(x="Month", y =
-  "Abundance") 
 
 ```
 
@@ -178,31 +174,12 @@ select(database, Phylum, value, Year, Month) %>%
   element_text(angle = 90, vjust = 0.5))-> graph_2
 ```
 
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "this is fig. 5"}
+```{r echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Relative abundances of the dominant phyla (>200 reads) in 2007 (A) and 2009 (B)."}
 
 ggarrange(graph_1, graph_2, labels = c("A", "B"),
   ncol = 2, nrow = 1)
 
 ```
-
-```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "this is fig. 6"}
-# maybe keep
-select(database, Phylum, value, pH, Year) %>%
-  filter(Year == 2009, pH > 0, value > 100) %>% 
-  ggplot(mapping = aes(fill = Phylum, x = pH, y =
-  value, color = Phylum, by = Phylum)) + geom_bar(
-  position="stack", stat="identity") +
-  labs(x = "pH", y = "Abundance") +
-  theme(legend.text = element_text(size = 6), 
-  legend.key.size = unit(0.45, "cm"), 
-  legend.key.height = unit(0.45, "cm"),  
-  legend.key.width = unit(0.45, "cm"))
-
-```
-
-**Discussion**
-
-
 
 **References**
 
